--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "scripts": {
     "start": "community-solid-server -c @css:config/file.json config/group-webids.json -f .data -m .",
     "build": "npm run build:ts && npm run build:components",
-    "build:components": "componentsjs-generator -s src -c dist/components -i .componentsignore -r hello-world",
+    "build:components": "componentsjs-generator -s src -c dist/components -i .componentsignore -r group-webids",
     "build:ts": "tsc",
     "prepare": "npm run build",
     "test": "jest"
